Made health check changes
